--- a/package.json
+++ b/package.json
@@ -40,21 +40,7 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "7.55.0",
-    "lucide-react": "^0.462.0",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.4",
-    "class-variance-authority": "^0.7.1",
-    "sonner": "2.0.3",
-    "recharts": "^2.13.3",
-    "react-slick": "^0.30.2",
-    "react-responsive-masonry": "^2.1.7",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
-    "framer-motion": "^11.11.17",
-    "re-resizable": "^6.10.0",
+    "@floating-ui/react": "^0.26.28",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -81,42 +67,57 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "date-fns": "^3.6.0",
-    "react-day-picker": "^8.10.1",
-    "embla-carousel-react": "^8.3.0",
     "embla-carousel-autoplay": "^8.3.0",
-    "vaul": "^1.0.0",
+    "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^11.11.17",
     "input-otp": "^1.4.1",
+    "lucide-react": "^0.462.0",
+    "re-resizable": "^6.10.0",
+    "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "7.55.0",
     "react-resizable-panels": "^2.1.7",
-    "@floating-ui/react": "^0.26.28",
-    "react-textarea-autosize": "^8.5.4"
+    "react-responsive-masonry": "^2.1.7",
+    "react-slick": "^0.30.2",
+    "react-textarea-autosize": "^8.5.4",
+    "recharts": "^2.13.3",
+    "sonner": "2.0.3",
+    "tailwind-merge": "^2.5.4",
+    "vaul": "^1.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/cli": "^4.0.0-beta.7",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
     "@vitejs/plugin-react": "^4.3.3",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "^2.1.8",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.15.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
-    "typescript": "~5.6.3",
-    "vite": "^6.0.1",
-    "@tailwindcss/cli": "^4.0.0-beta.7",
-    "tailwindcss": "^4.0.0-beta.7",
-    "autoprefixer": "^10.4.20",
+    "jsdom": "^25.0.1",
     "postcss": "^8.5.1",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
-    "vitest": "^2.1.8",
-    "@vitest/ui": "^2.1.8",
-    "@vitest/coverage-v8": "^2.1.8",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/user-event": "^14.5.2",
-    "jsdom": "^25.0.1"
+    "tailwindcss": "^4.0.0-beta.7",
+    "typescript": "~5.6.3",
+    "vite": "^6.0.1",
+    "vitest": "^2.1.8"
   },
   "peerDependencies": {
     "react": ">=16.8.0",
